--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2024"
 repository = "https://github.com/drerizo/mede"
 
 [dependencies]
-anyhow = "1.0.98"
-clap = "4.5.40"
-ffmpeg-next = "7.1.0"
-dioxus = "0.7.0-rc.3"
-image = "0.25.6"
-rayon = "1.10.0"
+# anyhow = "1.0.98"
+# clap = "4.5.40"
+dioxus = { version = "0.7.0", features = ["router"]}
+# image = "0.25.6"
+# rayon = "1.10.0"
 reqwest = "0.12.20"
-serde = "1.0.219"
-tempfile = "3.20.0"
-tokio = "1.45.1"
+# serde = "1.0.219"
+# tempfile = "3.20.0"
+tokio = { version = "1.48", features = ["full"] }
+yt-dlp = "1.3.4"
 
 [profile.dev]
 opt-level = 0
@@ -26,3 +26,12 @@ opt-level = 3
 debug = false
 lto = true
 panic = "abort"
+
+[features]
+default = ["desktop"]
+web = ["dioxus/web"]
+desktop = ["dioxus/desktop"]
+mobile = ["dioxus/mobile"]
+
+[build-dependencies]
+ureq = { version = "2", features = ["native-tls"] }
