--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = "0.12.20"
 # tempfile = "3.20.0"
 tokio = { version = "1.48", features = ["full"] }
 yt-dlp = "1.3.4"
+zip = "0.6"
 
 [profile.dev]
 opt-level = 0
